Tue Jul  6 16:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSMenuView.m: In ([-trackWithEvent:]) fixed indexing bug when mouse
	dragged off bottom of menu and released, also reformatted to GNU
	coding style.

Tue Jul  6 14:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSAffineTransform.h: Removed macros
	* Source/NSAffineTransform.m: Added macros

Tue Jul  6 13:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSEvent.h: Added event subtypes for appkit events
	* Headers/AppKit/NSWindow.h: Removed ([_setFrame:]) - achieve same
	effect using the event queue.
	* Source/Functions.m: Rewrite for new event types.
	* Source/NSWindow.m: Handle AppKit defined events for window movement
	and resizing.

Tue Jul  6  6:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSGraphicsContext.h: New method for window control -
	([_setFrame:forWindow:])
	* Headers/AppKit/NSWindow.h: New ivar 'autosave_name' and new method
	([_setFrame:]) for backend to call when window frame has changed.
	* Source/NSGraphicsContext.m: Dummy implementation of new method.
	* Source/NSWindow.m: Rewrite all moving/sizing methods and methods
	for storing/retrieving window frame info in defaults database.

1999-07-05  Adam Fedor  <fedor@gnu.org>

        * Source/GNUmakefile: Install NSPopUpButtonCell.h
	
1999-07-03  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Implement 
	([-dragImage:at:offset:event:pasteboard:source:slideBack:]) by calling
	the mothod of the smae name in the window view.

1999-07-03  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (-run): Added destroyContext (so we can
	remove backend run method).

	* Source/NSStringDrawing.m (drawRun): Better hack to work around
	DGS bug that fails to flush strings (XDPS backend only).

1999-06-30  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenuView.m: fixes:
